--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 		<!--=============== CSS ===============-->
 		<link rel="stylesheet" href="assets/css/styles.css" />
 
-		<title>Responsive halloween website - Bedimcode</title>
+		<title>Responsive halloween website</title>
 	</head>
 	<body>
 		<img src="assets/img/shape-bg.png" alt="" class="shape__bg" />
